<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Activities</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">姓名</string>
    <string name="phone">手机号码</string>
    <string name="enter_app">进入应用</string>
	<string name="confirm">确定</string>
	<string name="prompt">提示</string>
	<string name="activities">活动</string>
	<string name="dynamics">动态</string>
	<string name="registration">签到</string>
	<string name="address">地点</string>
	<string name="theme">主题</string>
	<string name="add_activity">添加活动</string>
	<string name="edit_activity">修改活动</string>
	<string name="date">日期</string>
	<string name="time">时间</string>
	<string name="participiants">参与人员</string>
	<string name="add_participant">添加参与人员</string>
	<string name="activity_registration">活动签到</string>
	<string name="activity_info">活动详细</string>
	<string name="delete">删除</string>
	<string name="operation">操作</string>
	<string name="open_registration">开启签到</string>
</resources>
