<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/glacier">
    <LinearLayout 
        android:id="@+id/ll_login"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:textColor="@color/white"/>
        <EditText 
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <EditText 
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"/>
        <Button 
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/enter_app"/>
    </LinearLayout>
</RelativeLayout>
