<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<android.support.v4.view.ViewPager
            android:id="@+id/vp_fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_activities"
                style="@style/menu_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activities" />

            <Button
                android:id="@+id/btn_dynamics"
                style="@style/menu_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dynamics" />

            <Button
                android:id="@+id/btn_registration"
                style="@style/menu_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registration" />
        </LinearLayout>

</LinearLayout>
