<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/botticelli"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/glacier"
        android:orientation="horizontal">
        <View 
             android:layout_width="30dp"
             android:layout_height="match_parent"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add_participant"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <Button 
            android:id="@+id/btn_confirm_add_participant"
            android:background="@drawable/confirm_btn_background"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ListView
            android:id="@+id/lv_participant_list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/listview_round_selector"
            android:cacheColorHint="#00000000"
            android:divider="@color/list_divider"
            android:dividerHeight="1dp"
            android:listSelector="#00000000" >
        </ListView>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText 
                android:id="@+id/et_participant_name"
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
                android:hint="@string/name" />
            <EditText 
                android:id="@+id/et_participant_phone"
                android:layout_below="@id/et_participant_name"
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"/>
        	</RelativeLayout>
	        <Button 
	            android:id="@+id/btn_add_participant"
	            android:text="@string/confirm"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
        </LinearLayout>
        
    </LinearLayout>
</LinearLayout>
