<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/fragment_title"
        android:text="@string/add_activity"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/dp_activity_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"/>
        <TimePicker 
            android:id="@+id/tp_activity_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText 
            android:id="@+id/et_activity_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/address"/>
        <EditText 
            android:id="@+id/et_activity_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/theme"/>
        <Button 
            android:id="@+id/btn_save_activity"
            android:layout_width="120dp"
            android:layout_marginBottom="40dp"
            android:layout_height="wrap_content"
            android:text="@string/add_activity"/>
        
        <ListView
            android:id="@+id/lv_attr_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_bg"
            android:cacheColorHint="#00000000"
            android:divider="@color/list_divider"
            android:dividerHeight="0.1dp"
            android:listSelector="#00000000" >
        </ListView>
    </LinearLayout>
	</ScrollView>
</LinearLayout>
